2017-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr80501.c,
	  support/regression/tests/gcc-torture-execute-pr81555.c:
	  Disable tests for older host compilers.

2017-09-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix issues in built-in memset() and handling of literals.
	* src/z80/gen.c:
	  Improve long long parameter passing.

2017-09-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/addsub.c:
	  Optimize addition.

2017-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  support/regression/tests/p99-conformance.c,
	  doc/sdccman.lyx:
	  Implement RFE #537: static in array parameters.

2017-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr7*.c
	  support/regression/tests/gcc-torture-execute-pr8*.c:
	  Port more tests from the GCC testsuite.
	* support/regression/tests/gcc-torture-execute-930529-1.c:
	  Disable test that hangs on GCC 7.2.0 for host.
	* support/regression/tests/gcc-torture-execute-pr51581-?.c:
	  Fix for test-host.

2017-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c:
	  Improve error message for storage class specifiers in parameters.
	* src/SDCC.y:
	  Separate type qualifiers from type specifiers to prepare for RFE #2538.
	* support/regression/tests/gcc-torture-execute-20120111-1.c,
	  support/regression/tests/gcc-torture-execute-20120817-1.c,
	  support/regression/tests/gcc-torture-execute-20140212-1.c,
	  support/regression/tests/gcc-torture-execute-20141125-1.c,
	  support/regression/tests/gcc-torture-execute-20170111-1.c,
	  support/regression/tests/gcc-torture-execute-pr65170.c,
	  support/regression/tests/gcc-torture-execute-pr65215-1.c,
	  support/regression/tests/gcc-torture-execute-pr65215-2.c,
	  support/regression/tests/gcc-torture-execute-pr66940.c,
	  support/regression/tests/gcc-torture-execute-pr69320-4.c: